--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * {
 	padding: 0;
 	margin: 0;
@@ -11,5 +9,42 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    font-family: 'Montserrat';
+	font-family: 'Montserrat';
+}
+
+h1 {
+	text-align: center;
+}
+
+h1,
+.from-input,
+.form-label {
+	color: rgba(0, 0, 0, 0.548);
+}
+
+form {
+	height: 300px;
+	width: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	box-shadow: 1px 1px 30px 1px rgba(0, 0, 0, 0.37);
+}
+
+.form-section {
+	display: flex;
+	flex-direction: column;
+	margin: 15px;
+	height: 60px;
+	position: relative;
+	overflow: hidden;
+}
+
+.form-input {
+	font-size: 20px;
+	background-color: pink;
+	width: 100%;
+	height: 100%;
+	padding-top: 15px;
 }
