--- a/style.css
+++ b/style.css
@@ -47,4 +47,11 @@ form {
 	width: 100%;
 	height: 100%;
 	padding-top: 15px;
+	padding-left: 5px;
+	border: none;
+	outline: none;
+}
+
+.input-label {
+	position: absolute;
 }
