--- a/style.css
+++ b/style.css
@@ -23,13 +23,15 @@ h1,
 }
 
 form {
-	height: 300px;
-	width: 300px;
+	height: 400px;
+	width: 400px;
+	padding: 20px 30px;
+	border-radius: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	box-shadow: 1px 1px 30px 1px rgba(0, 0, 0, 0.37);
+	box-shadow: 1px 1px 30px 1px rgba(0, 0, 0, 0.548);
 }
 
 .form-section {
@@ -43,15 +45,79 @@ form {
 
 .form-input {
 	font-size: 20px;
-	background-color: pink;
 	width: 100%;
 	height: 100%;
-	padding-top: 15px;
+	padding-top: 32px;
 	padding-left: 5px;
 	border: none;
 	outline: none;
 }
 
 .input-label {
+	display: inline-block;
 	position: absolute;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.548) ;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+.input-label::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	background-color: #0f68c7;
+	left: 0;
+	bottom: -1px;
+	transform: translateX(-101%);
+	transition: all.4s ease;
+}
+
+.form-input:focus + .input-label::after {
+	transform: translateX(0%);
+}
+
+.label-name {
+	position: absolute;
+	bottom: 2px;
+	transition: all .4s ease;
+}
+
+.form-input:focus + .input-label .label-name {
+	bottom: 35px;
+	font-weight: bold;
+	font-size: 14px;
+	color: #0f68c7;
+}
+
+.form-input:valid + .input-label .label-name {
+	bottom: 35px;
+	font-weight: bold;
+	font-size: 14px;
+	color: #0f68c7;
+}
+
+button {
+	font-size: 17px;
+	width: 80%;
+	border-radius: 10px;
+	border: none;
+	background:linear-gradient(#0f68c7 , #7aace2);
+	padding: 5px 0;
+	margin-top: 10px;
+	color: #fff;
+	transition: all .2s ease;
+}
+
+button:focus {
+	transform: scale(1.1);
+}
+
+.error {
+	color: red;
+}
+
+.success {
+	color: green;
 }
